1.12.x/_sources/reference_cmd/dipy_info.rst.txt
.. dipy_info:

=========
dipy_info
=========

Synopsis
--------

Provides useful information about different files used in medical imaging. Any number of input files can be provided. The program identifies the type of file by its extension.



Usage
-----

.. code-block:: bash

    dipy_info [OPTIONS] input_files

Input Parameters
----------------

* ``input_files``

  Any number of NIfTI, bvals, bvecs or tractography data files.

General Options
---------------

* ``--b0_threshold``

  Threshold used to find b0 volumes.
  (default: 50)

* ``--bvecs_tol``

  Threshold used to check that
  :math:`norm(        ext{bvec}) = 1 \pm      ext{bvecs_tol}` b-vectors are
  unit vectors.
  (default: 0.01)

* ``--bshell_thr``

  Threshold for distinguishing b-values in different shells.
  (default: 100)

* ``--reference``

  Reference anatomy for ``*.tck``, ``*.vtk``/``*.vtp``, ``*.fib``, and
  ``*.dpy`` tractography files.
  (default: None)

References
----------

Garyfallidis, E., M. Brett, B. Amirbekian, A. Rokem, S. Van Der Walt, M. Descoteaux, and I. Nimmo-Smith. Dipy, a library for the analysis of diffusion MRI data. Frontiers in Neuroinformatics, 1-18, 2014.